# godot-rust-ecs

./: .gitignore  README.md  build.ps1  build.sh
godot/: godot_bevy_ecs_demo.gdextension  godot_bevy_ecs_demo.gdextension.uid  main.tscn  project.godot
godot/.godot/: extension_list.cfg
godot/assets/: enemy.svg.import  player.svg.import
godot/views/: enemy.tscn  player.tscn
rust/: Cargo.toml
rust/presentation_derive/: Cargo.toml
rust/presentation_derive/src/: lib.rs
rust/presentation_derive/tests/: derive.rs
rust/src/: extension.rs  lib.rs  schedule.rs
rust/src/godot_bridge/: bridge.rs  context.rs  mod.rs  runtime.rs  scene_factory.rs  view_registry.rs
rust/src/godot_bridge/presenters/: entities.rs  lifecycle.rs  mod.rs  spatial.rs
rust/src/model/: components.rs  mod.rs  resources.rs
rust/src/model/systems/: lifecycle.rs  mod.rs  movement.rs
rust/src/presentation/: commands.rs  components.rs  contracts.rs  extraction.rs  mod.rs  output.rs  present.rs
