[package]
name = "godot_bevy_ecs_demo"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# godot-rust 0.5 usa a API Godot 4.6 por padrão.
godot = "0.5.4"

# Usamos somente o ECS do Bevy, sem janela/renderização do Bevy.
bevy_ecs = "0.19.0"
