[package]
name = "godot_bevy_ecs_demo"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[workspace]
members = ["presentation_derive"]
resolver = "3"

[lib]
crate-type = ["cdylib"]

[dependencies]
# godot-rust 0.5 usa a API Godot 4.6 por padrão.
godot = "0.5.4"

# Somente o ECS do Bevy; Godot continua dono de janela e renderização.
bevy_ecs = "0.19.0"

# Derive procedural local que gera a composição dos presenters.
presentation_derive = { path = "presentation_derive" }
